--- a/php/HealthcareVSDemocracy.html
+++ b/php/HealthcareVSDemocracy.html
@@ -10,7 +10,7 @@
     <h3> Example: "HIGHEST " </h3>
 	Democracy Index
 	<form action="healthcare11.php" method="post">
-		<label for="health11">Choose Under / Over: </label>
+		<label for="health11">Choose Highest / Lowest: </label>
 		  <select id="health11" name="health11">
 		    <option value="HIGHEST">HIGHEST</option>
 		    <option value="LOWEST">LOWEST</option>
@@ -19,7 +19,7 @@
 	</form>
 	Confirmed Cases
 	<form action="healthcare12.php" method="post">
-		<label for="health12">Choose Under / Over: </label>
+		<label for="health12">Choose Highest / Lowest: </label>
 		  <select id="health12" name="health12">
 		    <option value="HIGHEST">HIGHEST</option>
 		    <option value="LOWEST">LOWEST</option>
@@ -28,7 +28,7 @@
 	</form>
 	Recovered
 	<form action="healthcare13.php" method="post">
-		<label for="health13">Choose Under / Over: </label>
+		<label for="health13">Choose Highest / Lowest: </label>
 		  <select id="health13" name="health13">
 		    <option value="HIGHEST">HIGHEST</option>
 		    <option value="LOWEST">LOWEST</option>
@@ -37,7 +37,7 @@
 	</form>
 	Active
 	<form action="healthcare14.php" method="post">
-		<label for="health14">Choose Under / Over: </label>
+		<label for="health14">Choose Highest / Lowest: </label>
 		  <select id="health14" name="health14">
 		    <option value="HIGHEST">HIGHEST</option>
 		    <option value="LOWEST">LOWEST</option>
@@ -46,7 +46,7 @@
 	</form>
 	Deaths
 	<form action="healthcare15.php" method="post">
-		<label for="health15">Choose Under / Over: </label>
+		<label for="health15">Choose Highest / Lowest: </label>
 		  <select id="health15" name="health15">
 		    <option value="HIGHEST">HIGHEST</option>
 		    <option value="LOWEST">LOWEST</option>
@@ -62,7 +62,7 @@
     <h3> Example: "HIGHEST " </h3>
 	Democracy Index
 	<form action="healthcare21.php" method="post">
-		<label for="health21">Choose Under / Over: </label>
+		<label for="health21">Choose Highest / Lowest: </label>
 		  <select id="health21" name="health21">
 		    <option value="HIGHEST">HIGHEST</option>
 		    <option value="LOWEST">LOWEST</option>
@@ -71,7 +71,7 @@
 	</form>
 	Malaria Incidence
 	<form action="healthcare22.php" method="post">
-		<label for="health22">Choose Under / Over: </label>
+		<label for="health22">Choose Highest / Lowest: </label>
 		  <select id="health22" name="health22">
 		    <option value="HIGHEST">HIGHEST</option>
 		    <option value="LOWEST">LOWEST</option>
