--- a/php/LifeExpectancy.html
+++ b/php/LifeExpectancy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Life Expectancy</title>
+<title>HOME</title>
 <style>
   ul {
   list-style-type: none;
@@ -55,8 +55,8 @@ li.dropdown {
 }
 </style>
 </head>
-  <body>
 
+<body>
 
 <!-- Navigation Menu -->
 <ul>
@@ -76,9 +76,13 @@ li.dropdown {
   <li><a href="GeographicAggregates.html">Geographic Aggregates</a></li>
   <li><a href="HealthcareVSDemocracy.html">Healthcare vs Democracy</a></li>
   <li><a href="LifeExpectancy.html">Life Expectancy</a></li>
-  <li><a href="CovidAggregates.html">COVID Aggregates</a></li>
-</ul>
+  <li><a href="DiseaseAggregates.html">Disease Aggregates</a></li>
+  <li><a href="diseaseovertime.html">Disease Over Time</a></li>
+  <li><a href="crises.html">COVID Crisis Handling</a></li>
+  <li><a href="Inserts.html">INSERTS</a></li>
+  <li><a href="Deletes.html">DELETES</a></li>
 
+</ul>
 
     <h1>Life Expectancy</h1>
     <h3>Team Members: KEVIN GORMAN (KGORMAN4), UTKARSH SINGH (USINGH5)</h3>
