--- a/php/kgorman4_usingh5.html
+++ b/php/kgorman4_usingh5.html
@@ -76,7 +76,12 @@ li.dropdown {
   <li><a href="GeographicAggregates.html">Geographic Aggregates</a></li>
   <li><a href="HealthcareVSDemocracy.html">Healthcare vs Democracy</a></li>
   <li><a href="LifeExpectancy.html">Life Expectancy</a></li>
-  <li><a href="CovidAggregates.html">COVID Aggregates</a></li>
+  <li><a href="DiseaseAggregates.html">Disease Aggregates</a></li>
+  <li><a href="diseaseovertime.html">Disease Over Time</a></li>
+  <li><a href="crises.html">COVID Crisis Handling</a></li>
+  <li><a href="Inserts.html">INSERTS</a></li>
+  <li><a href="Deletes.html">DELETES</a></li>
+
 </ul>
 
 <h1>EN.601.315.SP21 Databases Final Project</h1>
