--- a/php/crises.html
+++ b/php/crises.html
@@ -87,7 +87,7 @@ li.dropdown {
 <h1>EN.601.315.SP21 Databases Final Project</h1>
 <h2>Team Members: KEVIN GORMAN (KGORMAN4), UTKARSH SINGH (USINGH5)</h2>
 <hr>
-<h3>Queries implemented but not teh frontend.</h3>
+<h3>Queries implemented but not the frontend.</h3>
 
 
 </body>
